--- a/front/src/index.html
+++ b/front/src/index.html
@@ -2,10 +2,11 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Front</title>
-  <!--<base href="/">-->
+  <title>Logi foxhole</title>
+  <!--https://portfolionp.000webhostapp.com/foxhole/-->
   <base href="https://portfolionp.000webhostapp.com/foxhole/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
