--- a/front/src/index.html
+++ b/front/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Logi foxhole</title>
   <!--https://portfolionp.000webhostapp.com/foxhole/-->
-  <base href="/">
+  <base href="https://portfolionp.000webhostapp.com/foxhole/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" type="image/x-icon" href="favicon.ico">
